--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
     <title>QRMaze</title>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <link href="css/main.css" rel="stylesheet" />
+
     <script src="scripts/qrcode.js"></script>
     <script src="scripts/cannon.js"></script>
     <script src="scripts/babylon.js"></script>
@@ -10,5 +14,15 @@
 </head>
 <body>
     <canvas id="canvas" class="offScreen"></canvas>
+    <div id="dialog-form" title="Create Labyrinth">
+        <form>
+            <fieldset>
+                <label for="name">Name of your significant other:</label>
+                <input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all">
+            </fieldset>
+        </form>
+    </div>
+    <div id="logo">
+    </div>
 </body>
 </html>
